added features to fireplace (switches) and to remote (star and guide)

--- a/dashboards/bedroom_remote.erb
+++ b/dashboards/bedroom_remote.erb
@@ -39,6 +39,11 @@
       <div data-id="brendans_bedroom_media_home" data-view="Hascript" data-title="Home" data-bgcolor="#222222" data-icon="home"></div>
     </li>
 	
+	<li data-row="2" data-col="4" data-sizex="1" data-sizey="1">
+      <div data-id="brendans_bedroom_media_star" data-view="Hascript" data-title="Star" data-bgcolor="#222222" data-icon="asterisk"></div>
+    </li>
+	
+	
 	
 	
 	
@@ -54,6 +59,9 @@
       <div data-id="brendans_bedroom_media_right" data-view="Hascript" data-title="Right" data-bgcolor="#222222" data-icon="arrow-right"></div>
     </li>
 	
+	<li data-row="3" data-col="4" data-sizex="1" data-sizey="1">
+      <div data-id="brendans_bedroom_media_guide" data-view="Hascript" data-title="Guide" data-bgcolor="#222222" data-icon="th-list"></div>
+    </li>
 	
 	
 	<li data-row="4" data-col="1" data-sizex="1" data-sizey="1">
@@ -96,6 +104,9 @@
       <div data-id="cpage1" data-view="ChangePage" data-icon="cogs" data-title="Source Select" data-page="2" data-stagger="false" data-fasttransition="true" data-event-click="onClick"></div>
     </li>
 	
+	<li data-row="6" data-col="3" data-sizex="1" data-sizey="1">
+      <div data-id="brendan_bedroom_active_media_player" data-view="Hainputselect" data-title="Active" data-icon="home"></div>
+    </li>
 	
   </ul>
 </div>
