--- a/dashboards/fireplace.erb
+++ b/dashboards/fireplace.erb
@@ -12,6 +12,21 @@ $(function() {
       <div data-id="fireplace_temperature" data-view="Hatemp" data-title="Fireplace Exahust" data-ontime="500" data-color="#FF0000"></div>
     </li>
 
+    <li data-row="2" data-col="1" data-sizex="3" data-sizey="1">
+      <div data-id="fireplace_burn_zone" data-view="Hainputselect" data-title="Fireplace Burn Zone" data-ontime="500" data-color="#FF0000"></div>
+    </li>
+	
+    <li data-row="4" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="jordan_fireplace_monitor" data-view="Haswitch" data-title="Jordan" data-ontime="500" data-color="#FF0000"></div>
+    </li>
+    <li data-row="4" data-col="2" data-sizex="1" data-sizey="1">
+      <div data-id="joel_fireplace_monitor" data-view="Haswitch" data-title="Joel" data-ontime="500" data-color="#FF0000"></div>
+    </li>
+    <li data-row="4" data-col="3" data-sizex="1" data-sizey="1">
+      <div data-id="brendan_fireplace_monitor" data-view="Haswitch" data-title="Brendan" data-ontime="500" data-color="#FF0000"></div>
+    </li>
+
+
 
 
   </ul>
