--- a/dashboards/office.erb
+++ b/dashboards/office.erb
@@ -28,11 +28,11 @@ $(function() {
 	<li data-row="5" data-col="2" data-sizex="1" data-sizey="1">
       <div data-id="cpage1" data-view="ChangePage" data-icon="plug" data-title="Power Strip" data-page="2" data-stagger="false" data-fasttransition="true" data-event-click="onClick"></div>
     </li>
-
+<!--
 	<li data-row="5" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="brendans_office_all_off" data-view="Hascript" data-icon="power-off" data-title="All Off"  data-ontime="500" data-color="#FF0000"></div>
     </li>
-
+-->
 
   </ul>
 </div>
@@ -46,11 +46,11 @@ $(function() {
 	<li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
       <div data-id="brendan_office_powerstrip_on" data-view="Hascript" data-title="All On"  data-ontime="500" data-color="#FF0000"></div>
     </li>
-	
+	<!--
 	<li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
       <div data-id="brendan_office_powerstrip_off" data-view="Hascript" data-title="All Off"  data-ontime="500" data-color="#FF0000"></div>
     </li>
-	
+	-->
     <li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
       <div data-id="office_center_monitor" data-view="Haswitch" data-title="Asus" data-ontime="500" data-color="#FF0000"></div>
     </li>
@@ -76,11 +76,11 @@ $(function() {
     </li>
 
     <li data-row="4" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="office_switch_1" data-view="Haswitch" data-title="Switch 1" data-ontime="500" data-color="#FF0000"></div>
+      <div data-id="office_label_maker" data-view="Haswitch" data-title="Label Maker" data-ontime="500" data-color="#FF0000"></div>
     </li>
  
     <li data-row="4" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="office_switch_2" data-view="Haswitch" data-title="Switch 2" data-ontime="500" data-color="#FF0000"></div>
+      <div data-id="hdmi_switch" data-view="Haswitch" data-title="HDMI Switch" data-ontime="500" data-color="#FF0000"></div>
     </li>
  
     <li data-row="4" data-col="3" data-sizex="1" data-sizey="1">
