--- a/dashboards/bedroom_lights.erb
+++ b/dashboards/bedroom_lights.erb
@@ -10,34 +10,35 @@
   
   <ul>
     <li data-row="1" data-col="1" data-sizex="3" data-sizey="2">
-      <div data-id="brendans_bedroom_focus" data-view="Hascene" data-title="Lights On" data-ontime="500" data-color="#FF0000"></div>
-    </li>
-
-	<li data-row="3" data-col="1" data-sizex="2" data-sizey="2">
-      <div data-id="brendans_bedroom_automate_leaving" data-view="Hascript" data-title="All Off"  data-ontime="500" data-color="#FF0000"></div>
-    </li>
-
-	<li data-row="3" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="brendans_bedroom_off" data-view="Hascene" data-title="Lights Off"  data-ontime="500" data-color="#FF0000"></div>
+      <div data-id="bedroom_focus" data-view="Hascene" data-title="On" data-ontime="500" data-color="#FF0000"></div>
     </li>
 	
-	<li data-row="4" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="brendans_bedroom_bedtime" data-view="Hascene" data-title="Bedtime Scene"  data-ontime="500" data-color="#FF0000"></div>
-	  </li>
-	<li data-row="5" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="brendans_bedroom_tv_time" data-view="Hascene" data-title="Lights TV Time"  data-ontime="500" data-color="#FF0000"></div>
+	<li data-row="3" data-col="1" data-sizex="3" data-sizey="1">
+      <div data-id="bedroom_off" data-view="Hascene" data-title="Off"  data-ontime="500" data-color="#FF0000"></div>
     </li>
 	
-	<li data-row="5" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="cpage1" data-view="ChangePage" data-icon="film" data-title="Media" data-page="2" data-stagger="false" data-fasttransition="true" data-event-click="onClick"></div>
+	<li data-row="4" data-col="1" data-sizex="3" data-sizey="1">
+      <div data-id="bedroom_bedtime" data-view="Hascene" data-title="Bedtime"  data-ontime="500" data-color="#FF0000"></div>
     </li>
 	
 	<li data-row="5" data-col="2" data-sizex="1" data-sizey="1">
       <div data-id="cpage1" data-view="ChangePage" data-icon="lightbulb-o" data-title="Single Light" data-page="3" data-stagger="false" data-fasttransition="true" data-event-click="onClick"></div>
     </li>
+	
+	<!--
+	
+	<li data-row="5" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="cpage1" data-view="ChangePage" data-icon="film" data-title="Media" data-page="2" data-stagger="false" data-fasttransition="true" data-event-click="onClick"></div>
+    </li>
+	
+	<li data-row="5" data-col="3" data-sizex="1" data-sizey="1">
+      <div data-id="brendans_bedroom_media_play_pause" data-view="Hascript" data-title="Play/Pause" data-color="#FF0000" data-icon="play"></div>
+    </li>
+	-->
 
   </ul>
 </div>
+
 <div class="gridster"> <!-- Media - PAGE 2 -->
   <ul>  
 	<li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
@@ -87,9 +88,6 @@
       <div data-id="brendans_bedroom_watch_hulu" data-view="Hascript" data-title="Watch Hulu" data-color="#FF0000" data-icon="film"></div>
     </li>
 	
-	<li data-row="4" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="brendans_bedroom_watch_live_tv" data-view="Hascript" data-title="Watch Live TV" data-color="#FF0000" data-icon="desktop"></div>
-    </li>
 	
 	<li data-row="5" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="cpage1" data-view="ChangePage" data-icon="long-arrow-left" data-title="Back" data-page="1" data-stagger="false" data-fasttransition="true" data-event-click="onClick"></div>
@@ -101,159 +99,25 @@
 <div class="gridster"> <!-- Single Light - PAGE 3 -->
   <ul>  
 	<li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="brendan_bedroom_tv_light" data-view="Hadimmer" data-title="TV Light" data-color="#FF0000"></div>
+      <div data-id="bedroom_post_lamp_1" data-view="Hadimmer" data-title="TV Light" data-color="#FF0000"></div>
     </li>
 	<li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="brendan_bedroom_fan_lights" data-view="Hagroup" data-title="Fan Lights" data-color="#FF0000"></div>
+      <div data-id="bedroom_post_light_2" data-view="Hadimmer" data-title="Nighstand" data-color="#FF0000"></div>
     </li>
-	<li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="brendan_bedroom_night_stand" data-view="Hadimmer" data-title="Nighstand" data-color="#FF0000"></div>
-    </li>
-
-	<li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="brendan_bedroom_fan_1" data-view="Hadimmer" data-title="Fan 1" data-color="#FF0000"></div>
-    </li>
-	<li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="brendan_bedroom_fan_2" data-view="Hadimmer" data-title="Fan 2" data-color="#FF0000"></div>
-    </li>
-	<li data-row="2" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="brendan_bedroom_fan_3" data-view="Hadimmer" data-title="Fan 3" data-color="#FF0000"></div>
-    </li>
-	
-    <li data-row="3" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="brendans_bedroom_focus" data-view="Hascene" data-title="Bright Scene" data-ontime="500" data-color="#FF0000"></div>
-    </li>
-	<li data-row="3" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="brendans_bedroom_tv_time" data-view="Hascene" data-title="TV Time Scene"  data-ontime="500" data-color="#FF0000"></div>
-    </li>
-	<li data-row="3" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="brendans_bedroom_night_stand" data-view="Hascene" data-title="Nightstand Scene"  data-ontime="500" data-color="#FF0000"></div>
-    </li>
-	
 	<li data-row="4" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="brendans_bedroom_bedtime" data-view="Hascene" data-title="Bedtime Scene"  data-ontime="500" data-color="#FF0000"></div>
+      <div data-id="bedroom_focus" data-view="Hascene" data-title="On" data-ontime="500" data-color="#FF0000"></div>
     </li>
 	<li data-row="4" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="brendans_bedroom_off" data-view="Hascene" data-title="Off Scene"  data-ontime="500" data-color="#FF0000"></div>
+      <div data-id="bedroom_off" data-view="Hascene" data-title="Off"  data-ontime="500" data-color="#FF0000"></div>
     </li>
 	
-	
-	
+	<li data-row="4" data-col="3" data-sizex="1" data-sizey="1">
+      <div data-id="bedroom_bedtime" data-view="Hascene" data-title="Bedtime"  data-ontime="500" data-color="#FF0000"></div>
+    </li>
 	
 	<li data-row="5" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="cpage1" data-view="ChangePage" data-icon="long-arrow-left" data-title="Back" data-page="1" data-stagger="false" data-fasttransition="true" data-event-click="onClick"></div>
     </li>
-	
-  </ul>
-</div>
-
-
-<div class="gridster"> <!-- Media - PAGE 3 -->
-
-  <ul>  
-	
-	<li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="brendan_bedroom_tv_power" data-view="Haswitch" data-title="TV" data-color="#FF0000"></div>
-    </li>
-	
-	<li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="brendan_tv_vol_down" data-view="Hascript" data-title="Volume Down" data-color="#FF0000" data-icon="volume-down"></div>
-    </li>
-	
-	<li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="brendan_tv_vol_up" data-view="Hascript" data-title="Volume Up" data-color="#FF0000" data-icon="volume-up"></div>
-    </li>
-	
-	<li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="brendans_roku_back" data-view="Hascript" data-title="Back" data-color="#FF0000" data-icon="long-arrow-left"></div>
-    </li>
-	
-	<li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="brendans_roku_up" data-view="Hascript" data-title="Up" data-color="#FF0000" data-icon="arrow-up"></div>
-    </li>
-	
-	<li data-row="2" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="brendans_roku_home" data-view="Hascript" data-title="Home" data-color="#FF0000" data-icon="home"></div>
-    </li>
-	
-	<li data-row="3" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="brendans_roku_left" data-view="Hascript" data-title="Left" data-color="#FF0000" data-icon="arrow-left"></div>
-    </li>
-	
-	<li data-row="3" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="brendans_roku_select" data-view="Hascript" data-title="OK" data-color="#FF0000" data-icon="check"><div>
-    </li>
-	
-	<li data-row="3" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="brendans_roku_right" data-view="Hascript" data-title="Right" data-color="#FF0000" data-icon="arrow-right"></div>
-    </li>
-	
-	<li data-row="4" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="brendans_roku_instant_replay" data-view="Hascript" data-title="Replay" data-color="#FF0000" data-icon="undo"></div>
-    </li>
-	
-	<li data-row="4" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="brendans_roku_down" data-view="Hascript" data-title="Down" data-color="#FF0000" data-icon="arrow-down"></div>
-    </li>
-	
-	<li data-row="4" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="brendans_roku_play_pause" data-view="Hascript" data-title="Play/Pause" data-color="#FF0000" data-icon="play"></div>
-    </li>
-	
-	
-    
-	
-	<!--
-	
-	TV Power - Vol Down - Vol Up
-	Back - Up - Home
-	Left - OK - Right
-	Replay - Down - Play/Pause
-	Main - TV Control - Roku Control
-	
-	
-	-->
-	<li data-row="5" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="cpage1" data-view="ChangePage" data-icon="cogs" data-title="Main" data-page="1" data-stagger="false" data-fasttransition="true" data-event-click="onClick"></div>
-    </li>
-	<li data-row="5" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="cpage1" data-view="ChangePage" data-icon="cogs" data-title="TV Control" data-page="4" data-stagger="false" data-fasttransition="true" data-event-click="onClick"></div>
-    </li>
-	<li data-row="5" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="cpage1" data-view="ChangePage" data-icon="cogs" data-title="Roku Control" data-page="5" data-stagger="false" data-fasttransition="true" data-event-click="onClick"></div>
-    </li>
-	
-  </ul>
-</div>
-<div class="gridster"> <!-- TV - PAGE 4 -->
-
-  <ul>  
-	
-	
-	<li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="brendan_tv_input_roku" data-view="Hascript" data-title="Roku" data-color="#FF0000" data-icon="list-ol"></div>
-    </li>
-	<li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="brendan_tv_input_pi" data-view="Hascript" data-title="Kodi" data-color="#FF0000" data-icon="list-ol"></div>
-    </li>
-	<li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="brendan_tv_input_chromecast" data-view="Hascript" data-title="Chromecast" data-color="#FF0000" data-icon="list-ol"></div>
-    </li>
-    
-	
-	
-	
-	
-	<li data-row="5" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="cpage1" data-view="ChangePage" data-icon="cogs" data-title="Main" data-page="1" data-stagger="false" data-fasttransition="true" data-event-click="onClick"></div>
-    </li>
-	<li data-row="5" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="cpage1" data-view="ChangePage" data-icon="cogs" data-title="Media" data-page="3" data-stagger="false" data-fasttransition="true" data-event-click="onClick"></div>
-    </li>
-	<li data-row="5" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="cpage1" data-view="ChangePage" data-icon="cogs" data-title="Roku Control" data-page="5" data-stagger="false" data-fasttransition="true" data-event-click="onClick"></div>
-    </li>
-	
   </ul>
 </div>
 
