--- a/dashboards/bedroom_remote.erb
+++ b/dashboards/bedroom_remote.erb
@@ -2,12 +2,12 @@
 <script type='text/javascript'>
     $(function() {
 	  // These settings override the defaults set in application.coffee. You can do this on a per dashboard basis.
-	  Dashing.numColumns = 4
+	  Dashing.numColumns = 2
 	});
 	
 </script>
-
-<div class="gridster"> <!-- Main - PAGE 1 -->
+<!--
+<div class="gridster"> 
   <ul>  
 	<li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="brendan_bedroom_tv_power" data-view="Haswitch" data-title="TV" data-bgcolor="#222222" ></div>
@@ -24,8 +24,6 @@
 	<li data-row="1" data-col="4" data-sizex="1" data-sizey="1">
       <div data-id="brendan_tv_vol_up" data-view="Hascript" data-title="Volume Up" data-bgcolor="#222222" data-icon="volume-up"></div>
     </li>
-	
-	
 	
 	<li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="brendans_bedroom_media_back" data-view="Hascript" data-title="Back" data-bgcolor="#222222" data-icon="long-arrow-left"></div>
@@ -64,6 +62,7 @@
     </li>
 	
 	
+	
 	<li data-row="4" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="brendans_media_instant_replay" data-view="Hascript" data-title="Replay" data-bgcolor="#222222" data-icon="undo"></div>
     </li>
@@ -75,7 +74,9 @@
 	<li data-row="4" data-col="3" data-sizex="1" data-sizey="1">
       <div data-id="brendans_bedroom_media_stop" data-view="Hascript" data-title="Stop" data-bgcolor="#222222" data-icon="stop"></div>
     </li>
-	
+	<li data-row="4" data-col="4" data-sizex="1" data-sizey="1">
+      <div data-id="brendan_bedroom_fan_lights" data-view="Hagroup" data-title="Fan Lights" data-color="#FF0000" data-bgcolor="#222222" ></div>
+    </li>
 	
 	
 	
@@ -91,9 +92,9 @@
       <div data-id="brendans_bedroom_media_fast_forward" data-view="Hascript" data-title="Fast Forward" data-color="#FF0000" data-icon="fast-forward"></div>
     </li>
 	
-	
-	
-    
+	<li data-row="5" data-col="4" data-sizex="1" data-sizey="1">
+      <div data-id="brendan_bedroom_night_stand" data-view="Hadimmer" data-title="Nighstand" data-color="#FF0000" data-bgcolor="#222222" ></div>
+    </li>
 	
 
 	<li data-row="6" data-col="1" data-sizex="1" data-sizey="1">
@@ -104,15 +105,16 @@
       <div data-id="cpage1" data-view="ChangePage" data-icon="cogs" data-title="Source Select" data-page="2" data-stagger="false" data-fasttransition="true" data-event-click="onClick"></div>
     </li>
 	
-	<li data-row="6" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="brendan_bedroom_active_media_player" data-view="Hainputselect" data-title="Active" data-icon="home"></div>
+	
+	<li data-row="6" data-col="4" data-sizex="1" data-sizey="1">
+      <div data-id="brendan_bedroom_tv_light" data-view="Hadimmer" data-title="TV Light" data-color="#FF0000" data-bgcolor="#222222" ></div>
     </li>
 	
   </ul>
 </div>
 
 
-<div class="gridster"> <!-- TV - PAGE 2 -->
+<div class="gridster"> 
 
   <ul>  
 	
@@ -172,19 +174,19 @@
   </ul>
 </div>
 
-
-<div class="gridster"> <!-- Single Light - PAGE 3 -->
+-->
+<div class="gridster"> 
   <ul>  
 	<li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="brendan_bedroom_tv_light" data-view="Hadimmer" data-title="TV Light" data-color="#FF0000"></div>
+      <div data-id="bedroom_post_lamp_1" data-view="Hadimmer" data-title="Bottom" data-color="#FF0000"></div>
     </li>
 	<li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="brendan_bedroom_fan_lights" data-view="Hagroup" data-title="Fan Lights" data-color="#FF0000"></div>
+      <div data-id="bedroom_post_light_2" data-view="Hadimmer" data-title="Top" data-color="#FF0000"></div>
     </li>
-	<li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="brendan_bedroom_night_stand" data-view="Hadimmer" data-title="Nighstand" data-color="#FF0000"></div>
+	<li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="bedroom_lights" data-view="Hagroup" data-title="Both" data-color="#FF0000"></div>
     </li>
-
+<!-- 
 	<li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="brendan_bedroom_fan_1" data-view="Hadimmer" data-title="Fan 1" data-color="#FF0000"></div>
     </li>
@@ -212,12 +214,12 @@
       <div data-id="brendans_bedroom_off" data-view="Hascene" data-title="Off Scene"  data-ontime="500" data-color="#FF0000"></div>
     </li>
 	
+	 -->
 	
 	
-	
-	<li data-row="6" data-col="1" data-sizex="1" data-sizey="1">
+	<!-- <li data-row="6" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="cpage1" data-view="ChangePage" data-icon="long-arrow-left" data-title="Back" data-page="1" data-stagger="false" data-fasttransition="true" data-event-click="onClick"></div>
-    </li>
+    </li> -->
 	
   </ul>
 </div>
