final check-in before re-installation

--- a/dashboards/office.erb
+++ b/dashboards/office.erb
@@ -15,16 +15,19 @@ $(function() {
 	<li data-row="3" data-col="1" data-sizex="3" data-sizey="1">
       <div data-id="brendans_office_simple_off" data-view="Hascript" data-title="Office Off"  data-ontime="500" data-color="#FF0000"></div>
     </li>
- 
+
 	<li data-row="4" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="brendans_office_relax" data-view="Hascene" data-title="Office Relax"  data-ontime="500" data-color="#FF0000"></div>
     </li>
-	
-	<li data-row="4" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="brendans_office_focus" data-view="Hascene" data-title="Office Focus"  data-ontime="500" data-color="#FF0000"></div>
-    </li>
-	
-	
+
+  	<li data-row="4" data-col="2" data-sizex="1" data-sizey="1">
+        <div data-id="brendans_office_focus" data-view="Hascene" data-title="Office Focus"  data-ontime="500" data-color="#FF0000"></div>
+      </li>
+
+    	<li data-row="4" data-col="3" data-sizex="1" data-sizey="1">
+          <div data-id="brendans_office_off" data-view="Hascene" data-title="Office Off"  data-ontime="500" data-color="#FF0000"></div>
+        </li>
+
 	<li data-row="5" data-col="2" data-sizex="1" data-sizey="1">
       <div data-id="cpage1" data-view="ChangePage" data-icon="plug" data-title="Power Strip" data-page="2" data-stagger="false" data-fasttransition="true" data-event-click="onClick"></div>
     </li>
@@ -42,7 +45,7 @@ $(function() {
 	<li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="cpage1" data-view="ChangePage" data-icon="cogs" data-title="Back" data-page="1" data-stagger="false" data-fasttransition="true" data-event-click="onClick"></div>
     </li>
-	
+
 	<li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
       <div data-id="brendan_office_powerstrip_on" data-view="Hascript" data-title="All On"  data-ontime="500" data-color="#FF0000"></div>
     </li>
@@ -54,23 +57,23 @@ $(function() {
     <li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
       <div data-id="office_center_monitor" data-view="Haswitch" data-title="Asus" data-ontime="500" data-color="#FF0000"></div>
     </li>
-	
+
     <li data-row="2" data-col="3" data-sizex="1" data-sizey="1">
       <div data-id="office_right_monitor" data-view="Haswitch" data-title="Right Acer" data-ontime="500" data-color="#FF0000"></div>
     </li>
- 
+
     <li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="office_left_monitor" data-view="Haswitch" data-title="Left Acer" data-ontime="500" data-color="#FF0000"></div>
     </li>
- 
+
     <li data-row="3" data-col="3" data-sizex="1" data-sizey="1">
       <div data-id="office_hp_desktop" data-view="Haswitch" data-title="HP Desktop" data-ontime="500" data-color="#FF0000"></div>
     </li>
- 
+
     <li data-row="3" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="office_lenovo_desktop" data-view="Haswitch" data-title="Lenovo Desktop" data-ontime="500" data-color="#FF0000"></div>
     </li>
- 
+
     <li data-row="3" data-col="2" data-sizex="1" data-sizey="1">
       <div data-id="brendan_office_monitors" data-view="Hagroup" data-title="Monitors" data-ontime="500" data-color="#FF0000"></div>
     </li>
@@ -78,18 +81,16 @@ $(function() {
     <li data-row="4" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="office_label_maker" data-view="Haswitch" data-title="Label Maker" data-ontime="500" data-color="#FF0000"></div>
     </li>
- 
+
     <li data-row="4" data-col="2" data-sizex="1" data-sizey="1">
       <div data-id="hdmi_switch" data-view="Haswitch" data-title="HDMI Switch" data-ontime="500" data-color="#FF0000"></div>
     </li>
- 
+
     <li data-row="4" data-col="3" data-sizex="1" data-sizey="1">
       <div data-id="office_speakers" data-view="Haswitch" data-title="Speakers" data-ontime="500" data-color="#FF0000"></div>
     </li>
-	
+
 
 
   </ul>
 </div>
-
-
