--- a/dashboards/office_desk.erb
+++ b/dashboards/office_desk.erb
@@ -19,22 +19,22 @@ $(function() {
 	<li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
       <div data-id="brendans_office_off" data-view="Hascene" data-title="Lights Off"  data-ontime="500" data-color="#FF0000"></div>
     </li>
- 
+
 	<li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
       <div data-id="brendans_office_relax" data-view="Hascene" data-title="Office Relax"  data-ontime="500" data-color="#FF0000"></div>
     </li>
-	
+
 	<li data-row="2" data-col="3" data-sizex="1" data-sizey="1">
       <div data-id="brendans_office_focus" data-view="Hascene" data-title="Office Focus"  data-ontime="500" data-color="#FF0000"></div>
     </li>
-	
-	
+
+
 	<li data-row="1" data-col="4" data-sizex="1" data-sizey="1">
       <div data-id="cpage1" data-view="ChangePage" data-icon="plug" data-title="Power Strip" data-page="2" data-stagger="false" data-fasttransition="true" data-event-click="onClick"></div>
     </li>
-	
+
     <li data-row="2" data-col="4" data-sizex="1" data-sizey="1">
-      <div data-id="office_center_monitor" data-view="Haswitch" data-title="Asus" data-ontime="500" data-color="#FF0000"></div>
+      <div data-id="brendan_desk_center_monitor" data-view="Haswitch" data-title="Asus" data-ontime="500" data-color="#FF0000"></div>
     </li>
 
 
@@ -42,7 +42,7 @@ $(function() {
       <div data-id="brendan_desk_lamp" data-view="Hadimmer" data-title="Desk Lamp" data-color="#FF0000"></div>
     </li>
 	<li data-row="2" data-col="5" data-sizex="1" data-sizey="1">
-      <div data-id="brendan_office_overhead_lights" data-view="Hagroup" data-title="Overhead Lights" data-color="#FF0000"></div>
+      <div data-id="office_fan_lights" data-view="Hagroup" data-title="Overhead Lights" data-color="#FF0000"></div>
     </li>
 
   </ul>
@@ -50,57 +50,55 @@ $(function() {
 
 <div class="gridster"> <!-- Power Strip - PAGE 2 -->
   <ul>
-	<li data-row="6" data-col="1" data-sizex="1" data-sizey="1">
+	<li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="cpage1" data-view="ChangePage" data-icon="long-arrow-left" data-title="Back" data-page="1" data-stagger="false" data-fasttransition="true" data-event-click="onClick"></div>
     </li>
-	
+<!--
 	<li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
       <div data-id="brendan_office_powerstrip_on" data-view="Hascript" data-title="All On"  data-ontime="500" data-color="#FF0000"></div>
     </li>
-	
+
 	<li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
       <div data-id="brendan_office_powerstrip_off" data-view="Hascript" data-title="All Off"  data-ontime="500" data-color="#FF0000"></div>
+    </li> -->
+
+    <li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
+      <div data-id="brendan_desk_center_monitor" data-view="Haswitch" data-title="Asus" data-ontime="500" data-color="#FF0000"></div>
     </li>
-	
-    <li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="office_center_monitor" data-view="Haswitch" data-title="Asus" data-ontime="500" data-color="#FF0000"></div>
+
+    <li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
+      <div data-id="brendan_desk_right_monitor" data-view="Haswitch" data-title="Right Acer" data-ontime="500" data-color="#FF0000"></div>
     </li>
-	
-    <li data-row="2" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="office_right_monitor" data-view="Haswitch" data-title="Right Acer" data-ontime="500" data-color="#FF0000"></div>
+
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="brendan_desk_left_monitor" data-view="Haswitch" data-title="Left Acer" data-ontime="500" data-color="#FF0000"></div>
     </li>
- 
-    <li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="office_left_monitor" data-view="Haswitch" data-title="Left Acer" data-ontime="500" data-color="#FF0000"></div>
-    </li>
- 
-    <li data-row="3" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="office_hp_desktop" data-view="Haswitch" data-title="HP Desktop" data-ontime="500" data-color="#FF0000"></div>
-    </li>
- 
-    <li data-row="3" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="office_lenovo_desktop" data-view="Haswitch" data-title="Lenovo Desktop" data-ontime="500" data-color="#FF0000"></div>
-    </li>
- 
-    <li data-row="3" data-col="2" data-sizex="1" data-sizey="1">
+
+    <li data-row="1" data-col="5" data-sizex="1" data-sizey="1">
       <div data-id="brendan_office_monitors" data-view="Hagroup" data-title="Monitors" data-ontime="500" data-color="#FF0000"></div>
     </li>
 
-    <li data-row="4" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="office_switch_1" data-view="Haswitch" data-title="Switch 1" data-ontime="500" data-color="#FF0000"></div>
+
+    <li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="power_supply" data-view="Haswitch" data-title="Power Supply" data-ontime="500" data-color="#FF0000"></div>
     </li>
- 
-    <li data-row="4" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="office_switch_2" data-view="Haswitch" data-title="Switch 2" data-ontime="500" data-color="#FF0000"></div>
+
+    <li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
+      <div data-id="soldering_station" data-view="Haswitch" data-title="Soldering Station" data-ontime="500" data-color="#FF0000"></div>
     </li>
- 
-    <li data-row="4" data-col="3" data-sizex="1" data-sizey="1">
+
+    <li data-row="2" data-col="3" data-sizex="1" data-sizey="1">
       <div data-id="office_speakers" data-view="Haswitch" data-title="Speakers" data-ontime="500" data-color="#FF0000"></div>
     </li>
-	
 
+
+        <li data-row="2" data-col="4" data-sizex="1" data-sizey="1">
+          <div data-id="aux_1" data-view="Haswitch" data-title="Aux 1" data-ontime="500" data-color="#FF0000"></div>
+        </li>
+
+        <li data-row="2" data-col="5" data-sizex="1" data-sizey="1">
+          <div data-id="aux_2" data-view="Haswitch" data-title="Aux 2" data-ontime="500" data-color="#FF0000"></div>
+        </li>
 
   </ul>
 </div>
-
-
